# openclaw-deploy

./: GITHUB_ACTIONS_WINDOWS.md  RELEASE_CHECKLIST.md  YUNRUI_COMMIT_SUMMARY.md  electron-builder.yml  install.sh  package-lock.json  package.json  pnpm-lock.yaml  云睿OpenClaw发布说明.md  使用文档.md
.github/workflows/: build-yunrui-windows.yml
electron/main/: menu.ts  updater.ts
electron/services/providers/: provider-runtime-sync.ts
electron/shared/providers/: registry.ts  types.ts
electron/utils/: openclaw-auth.ts  openrouter-headers-preload.cjs
release-offline-fix/: OpenClaw_Shell.ps1  OpenClaw_Shell.sh
scripts/: OpenClaw_Shell.ps1  OpenClaw_Shell.sh  build-release.ps1  check-yunrui-release.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/layout/: Sidebar.tsx
src/components/settings/: ProvidersSettings.tsx
src/i18n/locales/zh/: agents.json  channels.json  chat.json  cron.json  dreams.json  settings.json  setup.json
src/lib/: providers.ts
src/pages/: ChatPage.tsx
src/pages/Settings/: index.tsx
src/pages/Setup/: index.tsx
